--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <h1>验证界面</h1>
         <div id="datetime" class="datetime-display">正在加载...</div>
         <div class="button-container">
-            <button class="action-button" id="redirectButton">跳转到目标页面</button>
+            <button class="action-button" id="redirectButton">跳转到奇妙页面</button>
         </div>
         <div class="info-box">
             <p>请仔细核对管理员告诉您的验证代码，若没有问题，请点击上方按钮将跳转到kh页面</p>
@@ -168,5 +168,6 @@
         });
     </script>
 </body>
+
 
 </html>
