--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <p>如果跳转失败或代码有问题，您可能需要联系管理员。</p>
         </div>
         <div class="footer">
-            <p>© 2025 验证界面设计 | wywhpsmaq设计并编写</p>
+            <p>Copyright © 2025 wywhpsmaq</p>
         </div>
     </div>
     <script>
@@ -171,3 +171,4 @@
 
 
 </html>
+
