--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
         <div class="info-box">
             <p>请仔细核对管理员告诉您的验证代码，若没有问题，请点击上方按钮将跳转到kh页面</p>
             <p>如果跳转失败或代码有问题，您可能需要联系管理员。</p>
+            <p>上一次更新：2025年11月11日23:10:42</p>
         </div>
         <div class="footer">
             <p>Copyright © 2025 wywhpsmaq</p>
@@ -171,4 +172,5 @@
 
 
 </html>
+
 
